--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,8 @@ auth0.clientId=${CLIENT_ID}
 auth0.clientSecret=${CLIENT_SECRET}
 auth0.audience=${AUTH0_AUDIENCE}
 
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
